--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <title> PTI | Login & Registration</title>
+    <link rel="icon" type="image/png" href="./images/flavicon.png">
 </head>
 <body>
  <div class="wrapper">
